# shopify-seo-saas

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  cloudflared-config.yml  docker-compose.yml  pyproject.toml  restart_backend.ps1  run_fullstack.ps1  run_local.ps1  setup_ollama.ps1  setup_ollama.sh
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_shopify_integration.py  003_ai_infrastructure.py  004_seo_intelligence.py
app/: __init__.py  main.py
app/api/: router.py
app/auth/: __init__.py  jwt.py  password.py
app/config/: settings.py
app/core/: __init__.py  exceptions.py  logging.py
app/db/: __init__.py  base.py  session.py
app/dependencies/: auth.py  services.py
app/evaluation/: evaluator.py
app/graphs/: seo_workflow.py
app/integrations/: __init__.py
app/intelligence/: __init__.py  adapters.py  audit.py  content.py  internal_links.py  keywords.py  metadata.py  recommendations.py  redirects.py  schema.py  scoring.py  technical.py  utils.py
app/llm/: __init__.py  factory.py  provider.py
app/memory/: service.py
app/middleware/: logging.py
app/models/: __init__.py  agent_run.py  approval_request.py  base.py  blog.py  collection.py  embedding_metadata.py  evaluation_record.py  knowledge_document.py  mcp_tool_log.py  memory_entry.py  metafield.py  page.py  product.py  prompt_version.py  redirect.py  seo.py  settings.py  store.py  sync_log.py  tool_call.py  user.py  webhook_log.py  workflow_run.py
app/observability/: telemetry.py
app/rag/: chunker.py  (+8 more)
frontend/: .env.example  .env.production  eslint.config.mjs  middleware.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
scripts/: entrypoint.py
tests/: conftest.py  test_ai.py  test_auth.py  test_health.py  test_mcp.py  test_seo_intelligence.py  test_shopify.py
(+411 files in other folders)
