[project]
name = "shopify-seo-saas"
version = "0.3.0"
description = "Production-grade AI Shopify SEO SaaS backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[argon2]>=1.7.4",
    "loguru>=0.7.3",
    "python-multipart>=0.0.18",
    "email-validator>=2.2.0",
    "httpx>=0.28.0",
    "cryptography>=43.0.0",
    "tenacity>=9.0.0",
    "apscheduler>=3.10.0",
    "mcp>=1.27.0,<2",
    # Phase 3 — AI Infrastructure
    "langgraph>=0.2.60",
    "langchain-core>=0.3.28",
    "langchain-openai>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-google-genai>=2.1.0",
    "langchain-groq>=0.2.0",
    "langchain-community>=0.3.14",
    "langchain-text-splitters>=0.3.4",
    "sentence-transformers>=3.3.0",
    "qdrant-client>=1.12.0",
    "opentelemetry-api>=1.29.0",
    "opentelemetry-sdk>=1.29.0",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
    "tiktoken>=0.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
